WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30882
[Qt] WebFrame::counterValueForElementById must not be exposed
https://bugs.webkit.org/show_bug.cgi?id=30882
Summary
[Qt] WebFrame::counterValueForElementById must not be exposed
Shinichiro Hamaji
Reported
2009-10-28 14:41:58 PDT
As suggested in
Bug 30555
, we should not expose API only for DumpRenderTree.
Attachments
Patch v1
(4.32 KB, patch)
2009-10-28 14:43 PDT
,
Shinichiro Hamaji
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinichiro Hamaji
Comment 1
2009-10-28 14:43:27 PDT
Created
attachment 42054
[details]
Patch v1
Eric Seidel (no email)
Comment 2
2009-10-28 14:56:52 PDT
Comment on
attachment 42054
[details]
Patch v1 OK. LGTM.
Tor Arne Vestbø
Comment 3
2009-10-28 15:12:10 PDT
Nice, thanks!
Shinichiro Hamaji
Comment 4
2009-10-28 15:20:17 PDT
Committed
r50241
: <
http://trac.webkit.org/changeset/50241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug