2009-10-28  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Eric Seidel.

        [Qt] WebFrame::counterValueForElementById must not be exposed
        https://bugs.webkit.org/show_bug.cgi?id=30882

        * Api/qwebframe.cpp:
        (qt_drt_counterValueForElementById):
        * Api/qwebframe.h:
2009-10-28  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        [Qt] WebFrame::counterValueForElementById must not be exposed
        https://bugs.webkit.org/show_bug.cgi?id=30882

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::counterValueForElementById):


Canonical link: https://commits.webkit.org/41683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50241 268f45cc-cd09-0410-ab3c-d52691b4dbfc