WebKit/qt/Api/qwebframe.h
@@ -138,7 +138,6 @@ public:
     QString toHtml() const;
     QString toPlainText() const;
     QString renderTreeDump() const;
-    QString counterValueForElementById(const QString &id) const;
 
     QString title() const;
     void setUrl(const QUrl &url);
